syntax = "proto3";

package ci.test;
option java_package = "ru.yandex.ci.engine.test.schema";
option java_multiple_files = true;

message EmptyData {
}

message SimpleData {
    Simple simple_data_field = 1;
}

message Simple {
    string simple_string = 1;
}

message SimpleRepeatedData {
    SimpleRepeated simple_data_field = 1;
}

message SimpleRepeated {
    repeated string simple_string = 1;
}

message OtherData {
    Other other_data_field = 1;
}

message Other {
    string other_string = 1;
}

message SimpleListData {
    repeated Simple simple_list_data = 1;
}

message DifferentInputsData {
    Simple simple_data = 1;
    Other other_data = 2;
}

message PrimitiveInput {
    int32 int_field = 1;
    string string_field = 2;
    double double_field = 3;
    bool boolean_field = 4;
}

message PrimitiveInputData {
    PrimitiveInput primitives = 1;
}

message PrimitiveAndRepeatedData {
    PrimitiveInput primitive_values = 1;
    Simple values_registry = 2;
    Other values_yaml = 3;
    SimpleRepeated simple_data_field = 4;
}

message MapInput {
    map<string, Simple> values = 1;
}

message PrimitiveMapInput {
    map<string, string> values = 1;
}

message MapContainer {
    MapInput input_map = 1;
}

message PrimitiveMapContainer {
    PrimitiveMapInput input_map = 1;
}

message MapOutput {
    map<string, Simple> values = 1;
}

message PrimitiveOutput {
    double double_field = 1;
    int32 int_field = 2;
    string string_field = 3;
    bool boolean_field = 4;
}

// tasklets
// одинаковые input/output для упрощения тестирования
message SimpleTasklet {
    SimpleData input = 1;
    SimpleData output = 2;
}

message SimpleRepeatedTasklet {
    SimpleRepeatedData input = 1;
    SimpleRepeatedData output = 2;
}

message SimpleNoInputTasklet {
    EmptyData input = 1;
    SimpleData output = 2;
}


message SimpleNoOutputTasklet {
    SimpleData input = 1;
    EmptyData output = 2;
}

message SimpleOtherOutputTasklet {
    EmptyData input = 1;
    OtherData output = 2;
}

message SimpleInputListTasklet {
    SimpleListData input = 1;
    SimpleData output = 2;
}

message DifferentInputsTasklet {
    DifferentInputsData input = 1;
    EmptyData output = 2;
}

message TaskletWithPrimitiveInput {
    PrimitiveInput input = 1;
    EmptyData output = 2;
}

message TaskletWithPrimitiveInputData {
    PrimitiveInputData input = 1;
    EmptyData output = 2;
}

message TaskletWithPrimitiveAndRepeatedData {
    PrimitiveAndRepeatedData input = 1;
    EmptyData output = 2;
}

message TaskletWithPrimitiveOutput {
    EmptyData input = 1;
    PrimitiveOutput output = 2;
}

message TaskletWithMapInput {
    MapInput input = 1;
    EmptyData output = 2;
}

message TaskletWithMapOutput {
    EmptyData input = 1;
    MapOutput output = 2;
}

message TaskletWithMapContainer {
    MapContainer input = 1;
    EmptyData output = 2;
}

message TaskletWithPrimitiveMapContainer {
    PrimitiveMapContainer input = 1;
    EmptyData output = 2;
}

message OneOfInputImpl {
    message LocationMatcher {
        string deploy_unit = 1;
        string cluster = 2;
    }

    message ApprovalLocation {
        string location = 1;
    }

    oneof location {
        LocationMatcher location_match = 1;
        ApprovalLocation concrete_location = 2;
    }
}

message OneOfInput {
    OneOfInputImpl one_of = 1;
}

message OneOfTasklet {
    OneOfInput input = 1;
    EmptyData output = 2;
}